<resources>
    <string name="app_name">ERGO</string>
    <string name="api_key">AIzaSyCK_BEVRilRqGGhcHWYAmUY76O8Nu87YUE</string>
    <string name="event_perspective">Event Perspective</string>
    <string name="event_perspective_description">Open an event you are a part of</string>
    <string name="create_event">Create Event</string>
    <string name="create_event_description">Create a new event\n(for organisers)</string>
    <string name="join_event">Join Event</string>
    <string name="join_event_description">Choose and join an event you have been invited to</string>
    <string name="user_profile">Profile</string>
    <string name="user_profile_description">View your personal information</string>
    <string name="logout_button">Log out</string>
    <string name="log_in_title">Login</string>
    <string name="email_title">EMAIL</string>
    <string name="password_title">PASSWORD</string>
    <string name="log_in_sign_up">Sign Up Now</string>
    <string name="log_in_forgot_password">Forgot Password?</string>
    <string name="register_email_title">Email *</string>
    <string name="register_first_name_title">First Name *</string>
    <string name="register_nickname_title">Nickname</string>
    <string name="register_last_name_title">Last Name *</string>
    <string name="register_address_title">Address *</string>
    <string name="register_phone_number_title">Phone Number *</string>
    <string name="register_password_title">Password *</string>
    <string name="register_confirm_password_title">Confirm Password *</string>
    <string name="register_button_title">Register</string>
    <string name="register_button_back_to_login">Back</string>
    <string name="email_verification_message">You have not verified your email yet. Please click the verification button, then check your inbox and verify your email address.</string>
    <string name="email_verification_button_text">Click to Verify</string>
    <string name="forgot_password_button_text">Reset Password</string>
    <string name="forgot_password_back_button_text">Back</string>
    <string name="forgot_password_email_text">Email</string>
    <string name="forgot_password_message">Please enter your registered email, then press the forgot password button. An email will be send to you with further instructions.</string>
    <string name="slider_info_event_name">Event name</string>
    <string name="slider_info_organiser">Organiser</string>
    <string name="slider_info_description">Event description</string>
    <string name="slider_info_btn_save">Save inputs</string>
    <string name="slider_links_first_day">First day</string>
    <string name="slider_links_last_day">Last day</string>
    <string name="slider_links_location">Location</string>
    <string name="slider_links_event_image">Event image</string>
    <string name="create_event_prevb">Back</string>
    <string name="create_event_nextb">Next</string>
    <string name="create_event_finishb">Finish</string>
    <string name="child_slider_days_s_time">Starting time</string>
    <string name="child_slider_days_e_time">Ending time</string>
    <string name="vlada_je_peder">Vlada je peder.</string>
    <string name="child_slider_roles_btn_edit">Edit</string>
    <string name="child_slider_roles_btn_subordinates">Subordinates</string>
    <string name="child_slider_roles_tv_title">Title</string>
    <string name="child_slider_roles_tv_description">Description</string>
    <string name="child_slider_roles_edit_btn_confirm">Confirm</string>
    <string name="child_slider_roles_remove_message">Are you sure you want to remove the following role?</string>
    <string name="child_slider_roles_remove_btn_remove">Remove</string>
    <string name="child_slider_people_tv_event_role">Event role</string>
    <string name="child_slider_people_tv_email">Email</string>
    <string name="child_slider_people_tv_parent_email">Superior email</string>
    <string name="child_slider_people_remove_message">Are you sure you want to remove the following person?</string>
    <string name="child_slider_people_remove_btn_remove">Remove</string>
    <string name="create_event_pop_up_dialog_message">Are you sure you want to create the following event?</string>
    <string name="dummy_name">John Doe</string>
    <string name="dummy_role">Dummy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="no_events_to_choose_from">No events to choose from :(</string>
    <string name="loading_events">Loading events..</string>
    <string name="loading_invitations">Loading invitations..</string>
    <string name="loading_people">Loading people..</string>
    <string name="name">Name</string>
    <string name="role">Role</string>
    <string name="event_invitations">Event Invitations</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="no_invitations">You have not been invited to any events =(</string>
    <string name="no_people">It seems no people are participating in this event somehow ("?") </string>
    <string name="superior_name">Superior name</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pending">PENDING</string>
    <string name="person_name">Person name</string>
    <string name="nav_my_obligations">My Obligations</string>
    <string name="nav_event_schedule">Event Schedule</string>
    <string name="nav_list_of_people">List Of People</string>
    <string name="nav_break_centre">Break Centre</string>
    <string name="nav_about_event">About Event</string>
    <string name="nav_assign_obligations">Assign Obligations</string>
    <string name="nav_extra">Extra</string>
    <string name="nav_contact_superior">Contact Superior</string>
    <string name="nav_review_app">Review App</string>
    <string name="send_review">Send Review</string>
    <string name="your_review">Your Review</string>
    <string name="review_char_counter">0</string>
    <string name="review_char_counter_max">/500</string>
    <string name="details">Details</string>
    <string name="what">What</string>
    <string name="where">Where</string>
    <string name="dummy_text">Talicni Tom</string>
    <string name="loading_obligations">Loading obligations..</string>
    <string name="no_subordinates">You\'ve got no subordinates, friend.</string>
    <string name="choice_message">Superior Choice:\nChoose what action to take\n</string>
    <string name="assign_obligation">Assign\nObligation</string>
    <string name="view_subordinate_obligations">View\nSubordinate\nObligations</string>
    <string name="loading_obligations_of_subordinate">Loading subordinate\'s obligations..</string>
    <string name="complete">Complete</string>
    <string name="start">Start</string>
    <string name="no_obligations">You haven\'t got any obligations yet.</string>
    <string name="data_type">data_type</string>
    <string name="obligation_message">obligation_message</string>
    <string name="break_message">break_message</string>
    <string name="data_title">data_title</string>
    <string name="data_message">data_message</string>
    <string name="data_message_id">data_message_id</string>
    <string name="obligations_channel_id">obligations_channel_624</string>
    <string name="breaks_channel_id">breaks_channel_224</string>
    <string name="default_break_time">00:00</string>
    <string name="time_until_break_ends">Time until break ends:</string>
    <string name="request_break">Request Break</string>
    <string name="subordinate_break_requests">Subordinate\nBreak Requests</string>
    <string name="loading_all_breaks">Loading all breaks..</string>
    <string name="no_break">You\'re not on a break atm</string>
    <string name="fetching_active_break">Fetching active break:</string>
    <string name="no_breaks">You\'ve never asked for a break yet.</string>
    <string name="duration">Duration in minutes</string>
    <string name="status">Status</string>
    <string name="error_date_status">No status</string>
    <string name="break_pending">Pending approval</string>
    <string name="break_on_break">Currently on this break</string>
    <string name="break_ended">Break ended</string>
    <string name="self_time_message">Pick your break duration in minutes:</string>
    <string name="default_duration_time">Example: 15</string>
    <string name="fetching_break_requests">Fetching subordinates with break requests:</string>
    <string name="break_declined">Break declined</string>
    <string name="no_break_requests">Nobody\'s requesting a break atm.</string>
    <string name="minute_format_warning">Please type how long a break you want to give your subordinate.</string>
    <string name="nav_invite_new_person">Invite New Person</string>
    <string name="invite_new_person_message">Who and what will the new person be?</string>
    <string name="example_email">Example: newperson@gmail.com</string>
    <string name="email">Email</string>
    <string name="subordinates">Subordinates</string>
    <string name="example_role">Example: Superior</string>
    <string name="example_superior_name">Example: my_superior@gmail.com</string>
    <string name="example_subordinates">List all subordinates\' emails</string>
    <string name="invite_new_person_hint">*Separate all subordinates with a blank space (\" \")</string>
    <string name="superior_email">Superior email</string>
    <string name="invite_new_person_no_superior_hint">*If your invitee shouldn\'t have a superior, write \'nobody@nonono.com\' as the superior email.</string>

</resources>
