<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_my_obligations"
            android:icon="@drawable/ic_my_obligations"
            android:title="@string/nav_my_obligations" />

        <item
            android:id="@+id/nav_event_schedule"
            android:icon="@drawable/ic_event_schedule"
            android:title="@string/nav_event_schedule" />

        <item
            android:id="@+id/nav_list_of_people"
            android:icon="@drawable/ic_list_of_people"
            android:title="@string/nav_list_of_people" />

        <item
            android:id="@+id/nav_break_centre"
            android:icon="@drawable/ic_break_centre"
            android:title="@string/nav_break_centre" />

        <item
            android:id="@+id/nav_about_event"
            android:icon="@drawable/ic_about_event"
            android:title="@string/nav_about_event" />

        <item
            android:id="@+id/nav_assign_obligations"
            android:icon="@drawable/ic_assign_obligations"
            android:title="@string/nav_assign_obligations" />



    </group>
    <item android:id="@+id/nav_extra"
        android:title="@string/nav_extra">
        <menu>
            <item
                android:id="@+id/nav_contact_superior"
                android:icon="@drawable/ic_contact_superior"
                android:title="@string/nav_contact_superior" />
            <item
                android:id="@+id/nav_review_app"
                android:icon="@drawable/ic_review_app"
                android:title="@string/nav_review_app"/>
        </menu>
    </item>

</menu>