<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="match_parent">


    <android.support.v7.widget.CardView
        android:id="@+id/fragment_invite_new_person_cv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:cardBackgroundColor="@color/card_background"
        app:cardCornerRadius="20dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/fragment_invite_new_person_linlay_main"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/fragment_invite_new_person_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:layout_marginTop="16dp"
                    android:paddingEnd="16dp"
                    android:paddingStart="16dp"
                    android:layout_marginBottom="8dp"
                    android:fontFamily="@font/roboto_light"
                    android:text="@string/invite_new_person_message"
                    android:textColor="@color/dirtyWhite"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/fragment_invite_new_person_linlay1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_light"
                        android:paddingStart="20dp"
                        android:paddingEnd="0dp"
                        android:text="@string/email"
                        android:textColor="@color/dirtyWhite"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/fragment_invite_new_person_email"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/et_bg"
                        android:fontFamily="@font/roboto_light"
                        android:inputType="textEmailAddress|textAutoCorrect"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:hint="@string/example_email"
                        android:textColorHint="@color/dirtierWhite"
                        android:textColor="@color/dirtyWhite"
                        android:textCursorDrawable="@drawable/dirty_white_cursor_drawable"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fragment_invite_new_person_linlay2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_light"
                        android:paddingStart="20dp"
                        android:paddingEnd="0dp"
                        android:text="@string/role"
                        android:textColor="@color/dirtyWhite"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/fragment_invite_new_person_role"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/et_bg"
                        android:fontFamily="@font/roboto_light"
                        android:inputType="textCapSentences|textAutoCorrect"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:hint="@string/example_role"
                        android:textColorHint="@color/dirtierWhite"
                        android:textColor="@color/dirtyWhite"
                        android:textCursorDrawable="@drawable/dirty_white_cursor_drawable"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fragment_invite_new_person_linlay3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_light"
                        android:paddingStart="20dp"
                        android:paddingEnd="0dp"
                        android:text="@string/superior_email"
                        android:textColor="@color/dirtyWhite"
                        android:textSize="15sp" />

                    <EditText
                        android:id="@+id/fragment_invite_new_person_superior_email"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/et_bg"
                        android:fontFamily="@font/roboto_light"
                        android:inputType="textEmailAddress|textAutoCorrect"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:hint="@string/example_superior_name"
                        android:textColorHint="@color/dirtierWhite"
                        android:textColor="@color/dirtyWhite"
                        android:textCursorDrawable="@drawable/dirty_white_cursor_drawable"
                        android:textSize="15sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/fragment_invite_new_person_linlay4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/roboto_light"
                        android:paddingStart="20dp"
                        android:paddingEnd="0dp"
                        android:text="@string/subordinates"
                        android:textColor="@color/dirtyWhite"
                        android:textSize="15sp" />


                    <EditText
                        android:id="@+id/fragment_invite_new_person_subordinates"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/et_bg"
                        android:fontFamily="@font/roboto_light"
                        android:inputType="textEmailAddress|textAutoCorrect|textMultiLine"
                        android:paddingStart="15dp"
                        android:paddingEnd="15dp"
                        android:hint="@string/example_subordinates"
                        android:textColorHint="@color/dirtierWhite"
                        android:textColor="@color/dirtyWhite"
                        android:textCursorDrawable="@drawable/dirty_white_cursor_drawable"
                        android:textSize="15sp" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:text="@string/invite_new_person_no_superior_hint"
                    android:textColor="@color/dirtyWhite"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_light"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="center"
                    android:textAlignment="center"
                    android:text="@string/invite_new_person_hint"
                    android:textColor="@color/dirtyWhite"
                    android:textSize="15sp" />


                <ImageButton
                    android:id="@+id/fragment_invite_new_person_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/circle_add"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/roboto_light"
                    android:textColor="@color/dirtyWhite" />


            </LinearLayout>

            <ProgressBar
                android:id="@+id/fragment_invite_new_person_pb"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="40dp"
                android:layout_marginEnd="40dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>

</RelativeLayout>